# jitcdde

./: .gitignore  LICENSE  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: Makefile  conf.py  index.rst  requirements.txt
examples/: data_input.py  kuramoto_network.py  laminar_chaos.py  mackey-glass.py  mackey-glass_lyap.py  mackey_glass.py  mackey_glass_jump.py  mackey_glass_lyap.py  mackey_glass_parameter_jump.py  neutral.py  simple_neutral.py  state_dependent.py  sunflower_callback.py  two_Roesslers.py
jitcdde/: __init__.py  _helpers.py  _jitcdde.py  _python_core.py  hermite_spline.py  jitced_template.c  past.py  sympy_symbols.py
tests/: all_tests.sh  compare_C_and_Python_core.py  compare_C_and_Python_core_2.py  test_helpers.py  test_hermite_spline.py  test_jitcdde.py  test_lyaps.py  test_neutral.py  test_ode.py  test_past.py  test_past_from_function.py  test_python_core.py  test_restricted_lyap.py  test_sympy_input.py  test_transversal_lyap.py
