[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64",
    "setuptools-scm>=7",
]

[project]
name = "jitcdde"
dynamic = ["version"]
description = "Just-in-Time Compilation for Delay Differential Equations"
readme = "README.rst"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Gerrit Ansmann", email = "gansmann@uni-bonn.de" },
]
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
	"jitcxde_common>=1.3",
    "chspy>=1.1",
    "numpy",
    "symengine>=0.3.1.dev0",
]

[project.optional-dependencies]
test = [
    # NOTE: required for expr.simplify (symengine calls sympy for that)
    # https://github.com/symengine/symengine.py/issues/405
    "sympy",
]

[project.urls]
Documentation = "https://jitcdde.readthedocs.io"
Homepage = "http://github.com/neurophysik/jitcdde"

[tool.setuptools.packages.find]
include = [
    "jitcdde*",
]

[tool.setuptools.package-data]
jitcdde = [
    "jitced_template.c",
]

[tool.setuptools_scm]
write_to = "jitcdde/version.py"
